Changes to ensure that icons align with prizes

--- a/app/static/css/touch/style.css
+++ b/app/static/css/touch/style.css
@@ -68,6 +68,9 @@ body {
   height: 100px;
   background: transparent url("/images/touch/layout/img_arrows2.png") 50% 0px no-repeat;
 }
+h3 {
+  font-weight: bold;
+}
 .content-page {
   padding: 0 10px 0;
 }
